route.yaml
kind: Route
apiVersion: networking.k8s.io/v1
metadata:
  name: swagger-ui
  namespace: swagger-ui
  ownerReferences:
    - apiVersion: networking.k8s.io/v1
      kind: Ingress
      name: swagger-ui
      controller: true
spec:
  host: a472bd5e5a06f4e9b847ea2e4d3271f5-1333097664.us-east-1.elb.amazonaws.com
  path: /
  to:
    kind: Service
    name: swagger-ui
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
